# public/swagger.json
@@ -54,6 +54,32 @@
           }
         }
       }
+    },
+    "/basket/{productId}": {
+      "delete": {
+        "tags": ["Basket"],
+        "parameters": [
+          {
+            "name": "userId",
+            "in": "query",
+            "required": true,
+            "type": "string"
+          },
+          {
+            "name": "productId",
+            "in": "path",
+            "required": true,
+            "type": "integer"
+          }
+        ],
+        "responses": {
+          "200": {
+            "schema": {
+              "$ref": "#/definitions/Basket"
+            }
+          }
+        }
+      }
     }
   },
   "definitions": {
